		recursion required for transaction traces).
3.3.92	05jul18	Harden FST loader for missing .hier files (if applicable).
		Fixed broken GTK+-1.2 compile of twinwave.
		Fix scrolling on help window by adding scroll to end mark.
		Fix scrolling on status window when use_toolbutton_interface
		rc var is set to FALSE by adding scroll to end mark.
		Updated BUILT_SOURCES for vermin.
		extern yy_size_t yyleng fix in rtlbrowse.
3.3.93	03aug18	Added sst_dbl_action_type rc variable which controls side-
		effect of double-clicking in SST signals pane.
		Added xml2stems Verilator XML to rtlbrowse stems converter
		to distribution.  Eventually vermin will be removed.
		Added missing realpath() in udp emission in vermin.
3.3.94	03sep18	Applied ghwlib.c patch for dealing with null ranges.
		Added second chance algorithm for find_dumpfile() in case
		it fails.
3.3.95	07oct18 Added fflush on stdout for help text as fix for possible
		stdout problem with mingw/msys shells.
		Added preliminary support for Time datatype.
                Warnings fixes for Verilator integration.
                Fixed install_proc_filter usage	for Tcl	invocation.
		Change integer type to "integer" in SST to differentiate it
		from sv ints.
		Premiminary support for enum tables embedded in FST files.
3.3.96	15nov18	Changed to standardized zoom in/out/full hotkeys.
		Added time backtracking warning (for partial mode) to lxt2vcd.
                VCD time backtracking fix (not for interactive mode).
		Added drag_failed handling (can press ESC) to DnD operations.
                Prevent	missing	file in	savefile from causing savefile to be
                read as	VCD by mistake.
		Changed to Dinotrace-like 0s/1s rendering for bit vectors so
		values can be discerned without seeing the full value text.
                Removed unneeded pango_layout_get_extents() inside call for
                font_engine_draw_string().
		Changed bsearch_trunc() to run in constant time when monospace
		fonts are in use.