@@ -1685,3 +1685,5 @@
                 font_engine_draw_string().
 		Changed bsearch_trunc() to run in constant time when monospace
 		fonts are in use.
+		Added missing GDK_SCROLL_MASK to signal area (need for gtk3,
+		but not for other versions for some reason).
